--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ body {
     overflow: hidden;
     height: 100%;
     background-color: var(--bg);
-    background-image: var(--bg-image);
+    background-image: var(--bg-image), var(--bg-image-dark), var(--bg-image-light);
     background-repeat: repeat;
     color: var(--text);
     display: flex;
