--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ Variables
     --header-text-dark: #ebebeb;
     --header-text-light: #000000;
     
-    /* Terminal Elements */
+    /* Window Elements */
     --directory-color: #4e9a06;
     --symlink-color: #3465a4;
     --executable-color: #cc0000;
@@ -72,9 +72,9 @@ body {
 }
 
 /* ==================================
-Terminal Window
+Window
 ================================== */
-.terminal {
+.window {
     background-color: var(--header-bg);
     border: 1px solid var(--border);
     border-radius: 8px;
@@ -94,13 +94,13 @@ Terminal Window
 
 /* Media query for responsive adjustments */
 @media (max-width: 768px) {
-    .terminal {
+    .window {
         width: calc(100vw - 2.5rem);
         height: calc(100vh - 10rem);
     }
 }
 
-.terminal-header {
+.window-header {
     align-items: center;
     background: var(--header-bg-gradient);
     border-bottom: 1px solid var(--border);
@@ -112,12 +112,12 @@ Terminal Window
     padding: 0.5rem 1rem;
 }
 
-.terminal-header .buttons {
+.window-header .buttons {
     display: flex;
     gap: 0.5rem;
 }
 
-.terminal-header span {
+.window-header .window-title {
     width: 100%;
     text-align: center;
     color: var(--header-text);
@@ -125,7 +125,7 @@ Terminal Window
     font-weight: bold;
 }
 
-.terminal-body {
+.window-body {
     background-color: var(--bg);
     flex-grow: 1;
     height: calc(100% - 2.5rem); /* Adjust for header height */
@@ -134,7 +134,7 @@ Terminal Window
     padding: 1rem;
 }
 
-.terminal-status-bar {
+.window-status-bar {
     background-color: var(--header-bg);
     border-top: 1px solid var(--border);
     color: var(--header-text);
@@ -145,9 +145,9 @@ Terminal Window
 }
 
 /* ==================================
-Terminal Buttons
+Window Buttons
 ================================== */
-.terminal-header .button {
+.window-header .button {
     border-radius: 50%;
     box-shadow: 0 1px 2px var(--border), 0 -1px 2px var(--bg);
     cursor: default;
@@ -182,22 +182,22 @@ Terminal Buttons
 /* ==================================
 Scrollbars
 ================================== */
-.terminal-body::-webkit-scrollbar {
+.window-body::-webkit-scrollbar {
     background-color: var(--header-bg);
     border-left: 1px solid var(--border);
     opacity: 0.5;
     width: 1.5rem;
 }
 
-.terminal-body::-webkit-scrollbar-thumb {
+.window-body::-webkit-scrollbar-thumb {
     background-color: var(--border);
 }
 
-.terminal-body::-webkit-scrollbar-thumb:hover {
+.window-body::-webkit-scrollbar-thumb:hover {
     background-color: var(--scroll-hover);
 }
 
-.terminal-body::-webkit-scrollbar-button {
+.window-body::-webkit-scrollbar-button {
     display: none;
 }
 
@@ -223,7 +223,7 @@ Resize Handle (Grippy)
     z-index: 10;
 }
 
-.terminal.minimized .grippy {
+.window.minimized .grippy {
     display: none;
 }
 
@@ -258,7 +258,7 @@ Utility Classes
     --scroll-hover: var(--scroll-hover-light);
 }
 
-.terminal.minimized {
+.window.minimized {
     height: 2.5rem !important;
     left: 1.25rem !important;
     top: calc(100% - 4rem) !important;
@@ -266,7 +266,7 @@ Utility Classes
     width: calc(100% - 2.5rem) !important;
 }
 
-.terminal.maximized {
+.window.maximized {
     width: 100% !important;
     height: 100% !important;
     top: 0 !important;
@@ -278,7 +278,7 @@ Utility Classes
     border: 0;
 }
 
-.terminal.closed {
+.window.closed {
     display: none !important;
 }
 
