--- a/src/style.css
+++ b/src/style.css
@@ -315,8 +315,10 @@ Scrollbars
 div::-webkit-scrollbar {
     background-color: var(--header-bg);
     border-left: 1px solid var(--border);
+    border-top: 1px solid var(--border);
     opacity: 0.5;
     width: 1.5rem;
+    height: 1.5rem;
 }
 
 div::-webkit-scrollbar-thumb {
@@ -331,6 +333,14 @@ div::-webkit-scrollbar-button {
     display: none;
 }
 
+div::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    background-color: transparent;
+}
+
+div::-webkit-scrollbar-corner {
+    background-color: var(--header-bg);
+}
 /* ==================================
 Resize Handle (Grippy)
 ================================== */
